Remove the thumbnail / list view switcher

--- a/war/index.html
+++ b/war/index.html
@@ -12,7 +12,7 @@
 <!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
 	<link href="//s3.amazonaws.com/rise-common-test/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-select/bootstrap-select.min.css" rel="stylesheet" type="text/css">
-	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css">
+        <!-- <link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css"> -->
 	
 <!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css"> -->
 	<link href="//s3.amazonaws.com/rise-common-test/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css">
@@ -71,7 +71,7 @@
 <!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/bootstrap/bootstrap.min.js"></script>
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-select/bootstrap-select.min.js"></script>
-	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script>
+        <!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script> -->
 	<!-- <script type="text/javascript" src="lib/media.js"></script> -->
 </body>
 </html>
