custom data-auth and ctr-common for modal

--- a/war/modal.html
+++ b/war/modal.html
@@ -26,11 +26,12 @@
 	<script type="text/javascript" src="lib/angular/angular-resource.js"></script>
 	<script type="text/javascript" src="lib/angular/angular-route.js"></script>
 
-	<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/rise/ctr-common.js"></script>
+	<!-- <script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/rise/ctr-common.js"></script> -->
+	<script type="text/javascript" src="js/ctr-common.js"></script>
 
-	<script type="text/javascript" src="js/data/data-auth.js"></script>
-	<script type="text/javascript" src="js/data/data-cache.js"></script>
-	<script type="text/javascript" src="js/data/data-store.js"></script>
+	<script type="text/javascript" src="js/data/data-auth-simple.js"></script>
+	<!-- 	<script type="text/javascript" src="js/data/data-cache.js"></script> -->
+	<!-- 	<script type="text/javascript" src="js/data/data-store.js"></script> -->
 	<script type="text/javascript" src="js/data/data-storage.js"></script>
 	
 	<script type="text/javascript" src="js/app.js"></script>
