--- a/web/index-async.html
+++ b/web/index-async.html
@@ -29,7 +29,7 @@
 
     // load all of the dependencies asynchronously.
     $script([
-      'lib/angular/angular.js',
+      'components/angular/angular.js',
       'js/app.js',
       'js/services.js',
       'js/controllers.js',
