- Use new auth service in common module - Put config variables into  common-config module

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,10 @@
 			
 	<script type="text/javascript" src="js/ctr-common.js"></script>
 
-	<script type="text/javascript" src="js/data/data-auth-simple.js"></script>
+	<script type="text/javascript" src="js/config/config.js"></script>
+
+	<script type="text/javascript" src="common/gapi/svc-gapi.js"></script>
+	<script type="text/javascript" src="common/auth/svc-gapi-auth.js"></script>
 	<script type="text/javascript" src="js/data/data-storage.js"></script>
 	
 	<script type="text/javascript" src="js/app.js"></script>
