--- a/web/modal.html
+++ b/web/modal.html
@@ -16,8 +16,12 @@
 	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css"> -->
 	<link href="//s3.amazonaws.com/rise-common-test/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
+	
+	<!-- build:css css/all.min.css -->
 	<link href="css/media-library.css" rel="stylesheet" type="text/css">
+  <!-- endbuild -->
 
+	<!-- build:js script/main.min.js -->
 	<!-- Copied form Store project (needed for the Header) -->
 	<script type="text/javascript" src="js/globals.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
@@ -42,7 +46,8 @@
 	<script type="text/javascript" src="js/services.js"></script>
 
 	<script type="text/javascript" src="components/jQuery/jquery.js"></script>
-	
+		<!-- endbuild -->
+
 	<!--	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
 	<!--	<script type="text/javascrupt" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script> -->
 	<!--	<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script> -->
