--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,6 @@
 
 	<!-- build:js script/main.min.js -->
 	<!-- Copied form Store project (needed for the Header) -->
-	<script type="text/javascript" src="js/globals.js"></script>
 	<script type="text/javascript" src="js/utils.js"></script>
 
 	<script type="text/javascript" src="components/angular/angular.js"></script>
@@ -33,7 +32,10 @@
 			
 	<script type="text/javascript" src="js/ctr-common.js"></script>
 
-	<script type="text/javascript" src="js/data/data-auth-simple.js"></script>
+	<script type="text/javascript" src="js/config/config.js"></script>
+
+	<script type="text/javascript" src="common/gapi/svc-gapi.js"></script>
+	<script type="text/javascript" src="common/auth/svc-gapi-auth.js"></script>
 	<script type="text/javascript" src="js/data/data-storage.js"></script>
 	
 	<script type="text/javascript" src="js/app.js"></script>
@@ -77,5 +79,7 @@
 	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-select/bootstrap-select.min.js"></script>
         <!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script> -->
 	<!-- <script type="text/javascript" src="lib/media.js"></script> -->
+
+  <iframe name="logoutFrame" id="logoutFrame" style='display:none'></iframe>
 </body>
 </html>
