--- a/web/modal.html
+++ b/web/modal.html
@@ -23,29 +23,28 @@
 
 	<!-- build:js script/main.min.js -->
 	<!-- Copied form Store project (needed for the Header) -->
-	<script type="text/javascript" src="js/globals.js"></script>
-	<script type="text/javascript" src="js/utils.js"></script>
+  <script type="text/javascript" src="js/utils.js"></script>
 
-	<script type="text/javascript" src="components/angular/angular.js"></script>
-	<script type="text/javascript" src="components/angular-resource/angular-resource.js"></script>
-	<script type="text/javascript" src="components/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="components/angular/angular.js"></script>
+  <script type="text/javascript" src="components/angular-resource/angular-resource.js"></script>
+  <script type="text/javascript" src="components/angular-route/angular-route.js"></script>
+      
+  <script type="text/javascript" src="js/ctr-common.js"></script>
 
-	<!-- <script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/rise/ctr-common.js"></script> -->
-	<script type="text/javascript" src="js/ctr-common.js"></script>
+  <script type="text/javascript" src="js/config/config.js"></script>
 
-	<script type="text/javascript" src="js/data/data-auth-simple.js"></script>
-	<!-- 	<script type="text/javascript" src="js/data/data-cache.js"></script> -->
-	<!-- 	<script type="text/javascript" src="js/data/data-store.js"></script> -->
-	<script type="text/javascript" src="js/data/data-storage.js"></script>
-	
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="js/controllers.js"></script>
-	<script type="text/javascript" src="js/ctr-files.js"></script>
-	<script type="text/javascript" src="js/ctr-upload.js"></script>
-	<script type="text/javascript" src="js/filters.js"></script>
-	<script type="text/javascript" src="js/services.js"></script>
+  <script type="text/javascript" src="common/gapi/svc-gapi.js"></script>
+  <script type="text/javascript" src="common/auth/svc-gapi-auth.js"></script>
+  <script type="text/javascript" src="js/data/data-storage.js"></script>
+  
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/controllers.js"></script>
+  <script type="text/javascript" src="js/ctr-files.js"></script>
+  <script type="text/javascript" src="js/ctr-upload.js"></script>
+  <script type="text/javascript" src="js/filters.js"></script>
+  <script type="text/javascript" src="js/services.js"></script>
 
-	<script type="text/javascript" src="components/jQuery/jquery.js"></script>
+  <script type="text/javascript" src="components/jQuery/jquery.js"></script>
 		<!-- endbuild -->
 
 	<!--	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
@@ -108,5 +107,6 @@
 		<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/bootstrap/bootstrap.min.js"></script>
 		<!-- <script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script> -->
 		<!-- <script type="text/javascript" src="lib/media.js"></script> -->
+    <iframe name="logoutFrame" id="logoutFrame" style='display:none'></iframe>
 	</body>
 	</html>
