File List E2E Example
- Add Protractor E2E configuration
- E2E scenario case for file listing
- Mock gapi backend for E2E testing
- Update README file on CI, Rundeck & Testing info

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,8 @@
 	<script type="text/javascript" src="components/angular/angular.js"></script>
 	<script type="text/javascript" src="components/angular-resource/angular-resource.js"></script>
 	<script type="text/javascript" src="components/angular-route/angular-route.js"></script>
-			
+  <script type="text/javascript" src="components/jQuery/jquery.js"></script>
+
 	<script type="text/javascript" src="js/ctr-common.js"></script>
 
 	<script type="text/javascript" src="js/config/config.js"></script>
@@ -37,7 +38,6 @@
 	<script type="text/javascript" src="common/gapi/svc-gapi.js"></script>
 	<script type="text/javascript" src="common/auth/svc-gapi-auth.js"></script>
 	<script type="text/javascript" src="js/data/data-storage.js"></script>
-  <script type="text/javascript" src="js/data/data-storage.js"></script>
   <script type="text/javascript" src="js/files/svc-file-list.js"></script>
 	
 	<script type="text/javascript" src="js/app.js"></script>
@@ -47,7 +47,6 @@
 	<script type="text/javascript" src="js/filters.js"></script>
 	<script type="text/javascript" src="js/services.js"></script>
 
-	<script type="text/javascript" src="components/jQuery/jquery.js"></script>
 	<!-- endbuild -->
 	
 <!--	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
@@ -56,8 +55,10 @@
 
 	<script type="text/javascript" src="//rvaviewer-test.appspot.com/gadgets/gadgets.min.js"></script>
 	
+  <!--build:e2e -->
 	<script type="text/javascript" src="//apis.google.com/js/client.js?onload=handleClientJSLoad"></script>
-	
+	 <!-- endbuild -->
+
 
 	<!-- <script type="text/javascript" src="lib/jquery.form.js"></script> -->
 
