--- a/web/modal.html
+++ b/web/modal.html
@@ -34,15 +34,16 @@
 
   <script type="text/javascript" src="common/gapi/svc-gapi.js"></script>
   <script type="text/javascript" src="common/auth/svc-gapi-auth.js"></script>
-  <script type="text/javascript" src="js/data/data-storage.js"></script>
   <script type="text/javascript" src="js/files/svc-file-list.js"></script>
 
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
+  <script type="text/javascript" src="js/svc-initial-auth.js"></script>
   <script type="text/javascript" src="js/ctr-files.js"></script>
   <script type="text/javascript" src="js/ctr-upload.js"></script>
   <script type="text/javascript" src="js/filters.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
+  <script type="text/javascript" src="js/data/data-storage.js"></script>
 
   <script type="text/javascript" src="components/jQuery/jquery.js"></script>
 		<!-- endbuild -->
@@ -67,27 +68,6 @@
 </head>
 <body>
 	<div class="widget-overlay" ng-click="closeButtonClick()"></div>
-	<div id="signindialog" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content" ng-controller="commonController">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeButtonClick()">
-						<i class="glyphicons remove_2"></i>
-					</button>
-					<h2 class="modal-title" id="myModalLabel">
-						Please Sign In</h2>
-					</div>
-					<div class="modal-body">
-						<a href="" class="sign-in" ng-click="login()">
-							<span>Sign In</span>
-							<i class="glyphicons log_in"></i>
-						</a>
-					</div>
-					<div class="modal-footer">
-					</div>
-				</div>
-			</div>
-		</div>
 		<div class="widget-wrapper container modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeButtonClick()">
