--- a/web/modal.html
+++ b/web/modal.html
@@ -38,6 +38,8 @@
   <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="js/svc-initial-auth.js"></script>
   <script type="text/javascript" src="js/ctr-files.js"></script>
+  <script type="text/javascript" src="js/svc-bandwidth.js"></script>
+  <script type="text/javascript" src="js/ctr-bandwidth.js"></script>
   <script type="text/javascript" src="js/ctr-upload.js"></script>
   <script type="text/javascript" src="js/filters.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
