--- a/web/modal.html
+++ b/web/modal.html
@@ -36,7 +36,7 @@
 
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/controllers.js"></script>
-  <script type="text/javascript" src="js/svc-initial-auth.js"></script>
+  <script type="text/javascript" src="js/svc-oauth.js"></script>
   <script type="text/javascript" src="js/ctr-files.js"></script>
   <script type="text/javascript" src="js/svc-bandwidth.js"></script>
   <script type="text/javascript" src="js/ctr-bandwidth.js"></script>
