--- a/web/modal.html
+++ b/web/modal.html
@@ -8,26 +8,18 @@
 
 	<link rel="shortcut icon" href="favicon.ico" />
 
-	<!-- Latest compiled and minified CSS -->
-	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
-	<link href="//s3.amazonaws.com/rise-common-test/styles/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css">
-	
-	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/bootstrap-switch/bootstrap-switch.min.css" rel="stylesheet" type="text/css"> -->
-	<!-- 	<link href="//s3.amazonaws.com/rise-common/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css"> -->
 	<link href="//s3.amazonaws.com/rise-common-test/styles/glyphicons/glyphicons.min.css" rel="stylesheet" type="text/css">
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
-	
-	<!-- build:css css/all.min.css -->
-	<link href="css/media-library.css" rel="stylesheet" type="text/css">
-  <!-- endbuild -->
-
+          <!-- build:css css/all.min.css -->
+	<link href="components/rise-vision-style-guide/dist/css/rise.min.css" rel="stylesheet" type="text/css">
+          <!-- endbuild -->
 	<!-- build:js script/main.min.js -->
 	<!-- Copied form Store project (needed for the Header) -->
 
   <script type="text/javascript" src="components/angular/angular.js"></script>
   <script type="text/javascript" src="components/angular-resource/angular-resource.js"></script>
   <script type="text/javascript" src="components/angular-route/angular-route.js"></script>
-      
+
   <script type="text/javascript" src="js/config/config.js"></script>
 
   <script type="text/javascript" src="common/gapi/svc-gapi.js"></script>
@@ -47,29 +39,14 @@
 
   <script type="text/javascript" src="components/jQuery/jquery.js"></script>
 		<!-- endbuild -->
-
-	<!--	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script> -->
-	<!--	<script type="text/javascrupt" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.1/jquery-ui.min.js"></script> -->
-	<!--	<script type="text/javascript" src="lib/jquery.animate-colors-min.js"></script> -->
-
 	<script type="text/javascript" src="//rvaviewer-test.appspot.com/gadgets/gadgets.min.js"></script>
-	
+
 	<script type="text/javascript" src="//apis.google.com/js/client.js?onload=handleClientJSLoad"></script>
-	
-
-	<!-- <script type="text/javascript" src="lib/jquery.form.js"></script> -->
-
-<!--
-<script type="text/javascript" src="lib/dropzone/dropzone.js"></script>
-<link href="lib/dropzone/css/dropzone.css" rel="stylesheet" />
--->
-
-<!-- <script type="text/javascript" src="./media.js"></script> -->
 </head>
 <body>
 	<div class="widget-overlay" ng-controller="ModalWindowController"
                                     ng-click="closeButtonClick()"></div>
-		<div class="widget-wrapper container modal-content">
+		<div class="widget-wrapper container modal-content storage-modal">
 			<div ng-controller="ModalWindowController" class="modal-header">
 				<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="closeButtonClick()">
 					<i class="glyphicons remove_2"></i>
@@ -83,11 +60,7 @@
 			<div ng-view></div>
 		</div>
 
-		<!-- Latest compiled and minified JavaScript -->
-		<!--	<script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap/bootstrap.min.js"></script> -->
 		<script type="text/javascript" src="//s3.amazonaws.com/rise-common-test/scripts/bootstrap/bootstrap.min.js"></script>
-		<!-- <script type="text/javascript" src="//s3.amazonaws.com/rise-common/scripts/bootstrap-switch/bootstrap-switch.min.js"></script> -->
-		<!-- <script type="text/javascript" src="lib/media.js"></script> -->
     <iframe name="logoutFrame" id="logoutFrame" style='display:none'></iframe>
 	</body>
 	</html>
